--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
   </header>
 
 
-  <div class="big"></div>
+  <div id="home-background">
+    <div class="content">
+        <h1>Welcome to <span class="freecodecamp">FreeCodeCamp</span> Norwich!</h1>
+
+        <p>Here we work together to learn, create and have fun building projects that will give you the knowledge and experience to achieve your goals.</p>
+    
+        <p>Whether you want to change career, socialise with like-minded people that love programming as much as you do or to build whatever your imagination can conjure up, this is the right place for you.</p>
+    </div>
+  </div>
 
 
 
