--- a/curriculum.html
+++ b/curriculum.html
@@ -29,7 +29,7 @@
     </nav>
   </header>
 
-  <main class="main-content">
+  <main class="curriculum-content">
 
     <section class="intro">
 
@@ -97,7 +97,7 @@
 
     <section class="back-end">
 
-        <div class="image">
+        <div class="backend-image image">
             <img src="img/backend.png" alt="A diagram of backend-end development skills">
         </div>
     
